recursion.logo.lessons.recursion.logo.koch.Crab.scala.error
Crab:6: error: ')' expected but ';' found.
    crabKoch(levels-1,length*(2**(1/2));
                                       ^